Modifiqué unos detalles de la carpeta html y comenté algunos archivos para más claridad

--- a/Html/Listas.html
+++ b/Html/Listas.html
@@ -8,7 +8,7 @@
         Tipos de listas
     </h1>
     <h2>Lista ordenada</h2>
-    <ol>
+    <ol><!--ol es para listas ordenadas, li es para cada elemento de la lista-->
         <li>1/2 kg de carne molida</li>
         <li>1/2 kg de pollo</li>
         <li>1/2 kg de jamón</li>
@@ -19,7 +19,7 @@
         <li>1/2 kg de papa</li>
     </ol>
     <h2>Lista desordenada</h2>
-    <ul>
+    <ul><!--ul es para listas desordenadas, li es para cada elemento de la lista-->
         <li>Free fire</li>
         <li>Mario Kart</li>
         <li>Call of duty</li>
