--- a/Html/froms.html
+++ b/Html/froms.html
@@ -6,13 +6,13 @@
 <body>
     <h1>Tipos de formularios</h1>
     <form>
-        <input type="text" placeholder="Nombre de usuario" title="De tipo texto">
-        <input type="password" required placeholder="Contraseña" name="Contraseña" id="124">
-        <input type="checkbox" name="Confirmacion" id="123">
-        <input type="file" name="Archivo" id="001">
-        <input type="email" placeholder="Correo@gmail.com" required name="email" id="002">
-        <input type="date" required name="Fecha_naciomiento" id="003">
-        <input type="submit">
+        <input type="text" placeholder="Nombre de usuario" title="De tipo texto"><!--Para escribir un nombre -->
+        <input type="password" required placeholder="Contraseña" name="Contraseña"><!--Para escribir una contraseña, required es para que sea obligatorio-->
+        <input type="checkbox" name="Confirmacion"><!--Checkbox es para seleccionar o no una opcion-->
+        <input type="file" name="Archivo"><!--Para subir archivos-->
+        <input type="email" placeholder="Correo@gmail.com" required name="email"><!--Para escribir un correo electronico-->
+        <input type="date" required name="Fecha_naciomiento"><!--Para seleccionar una fecha-->
+        <input type="submit" value="Submit"><!--Submit es para enviar el formulario, value es para darle un nombre al button-->
     </form>
 </body>
 </html>
