--- a/Html/imagenes/img.html
+++ b/Html/imagenes/img.html
@@ -8,7 +8,7 @@
     <h2>My mom</h2>
     <img src="mom.jpg" alt="Photo of my mom">
     <h2>My dad</h2>
-    <img src="../Enlaces/Dad.jpg" alt="Phto of my dad">
+    <img src="../Enlaces/Dad.jpg" alt="Photo of my dad">
     <h2>My brother</h2>
     <img src="../brother.jpeg">
 </body>
