--- a/Css/Shades/index.html
+++ b/Css/Shades/index.html
@@ -7,7 +7,7 @@
 <body>
     <div class="Box">
         <img class="img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRiOR1qN3hMjF199xv8gU4NWH4fLEueiA4hrA&s" alt="Foto de WhatsApp">
-        <h2>SUBTITULO XD</h2>
+        <h2>Carta de presentación</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde architecto, obcaecati totam autem, veniam vel nemo velit explicabo perferendis blanditiis deserunt facilis minus, voluptatum eum quo animi natus similique voluptas.</p>
     </div>
 </body>
