--- a/Html-Avanzado/Enlaces avanzados/index.html
+++ b/Html-Avanzado/Enlaces avanzados/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>TextArea y Labels</title>
+    <title>Enlaces avanzados</title>
 </head>
 
 <body>
@@ -62,11 +62,11 @@
         <div class="form_input">
             <input type="submit" value="Enviar">
         </div>
-
+        
         <!--Reset Button-->
         <div class="form_input">
-            <label for="">Acepto los terminos y condiciones
-                <input type="checkbox" class="checkbox" required>
+            <label for="">Acepto los <a href="terms.html" target="_blank">terminos y condiciones</a>
+                <input type="checkbox" class="checkbox">
             </label>
         </div>
     </form>
