Reemplace el label del terms.html de 'Enlaces avanzados' por un span y comente un procedimiento

--- a/Html-Avanzado/Enlaces avanzados/index.html
+++ b/Html-Avanzado/Enlaces avanzados/index.html
@@ -28,10 +28,11 @@
                 </label>
             </div>
         </fieldset>
+
         <!--Select & Option-->
         <div class="form_input">
             <label>Tipo de usuario
-                <select name="Type_of_user">
+                <select name="Type_of_user"><!--Select crea un menu desplegable-->
                     <option value="user1">Usuario</option>
                     <option value="user2">Empresa</option>
                     <option value="user3">Comercio</option>
