--- a/Html-Avanzado/Enlaces avanzados/terms.html
+++ b/Html-Avanzado/Enlaces avanzados/terms.html
@@ -31,7 +31,7 @@
             border-radius: 5px;
         }
 
-        label {
+        span {
             font-size: 0.8em;
             line-height: 2;
         }
@@ -53,7 +53,7 @@
 
 <body>
 
-    <div class="links">
+    <nav class="links">
         <fieldset>
             <legend>Indice</legend>
             <div>
@@ -62,12 +62,12 @@
             <div>
                 <a href="#changes_returns">CAMBIOS Y DEVOLUCIONES</a>
             </div>
-            <label for="descarga">Descargar terminos y condiciones</label>
+            <span>Descargar términos y condiciones</span>
             <div>
                 <a href="terms.html"  id="descarga" download>DESCARGAR</a>
             </div>
         </fieldset>
-    </div>
+    </nav>
     <header>
         <h1>📝 Términos y Condiciones de Uso</h1>
         <p><strong>Última actualización:</strong> 13 de agosto de 2025</p>
