Agrege la capeta 'Lazy loading' si su respectivo contenido

--- a/Html-Avanzado/Audio y Video/index.html
+++ b/Html-Avanzado/Audio y Video/index.html
@@ -15,7 +15,7 @@
         Tu navegador no soporta la etiqueta de video.
     </video>
     <h2>Canción <a href="https://www.letras.com/ana-gabriel/167416/" target="_blank">Simplemente amigos</a></h2>
-    <audio controls src="Simplemente Amigos(MP3_70K).mp3" title="Cacion de ana-gabriel, Simplemente amigos"></audio>
+    <audio controls src="Simplemente Amigos(MP3_70K).mp3" title="Cancion de ana-gabriel, Simplemente amigos"></audio>
 </body>
 
 </html>
