Agrege algunos comentarios a los proyectos y unas nuevas carpetas 'metodologia BEM y psudo-clases'

--- a/Css-Avanzado/Pseudo-Clases/index.html
+++ b/Css-Avanzado/Pseudo-Clases/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    <h1>TITULO</h1>
+    <div class="Content-aling">
+        <h1>TITULO</h1>
+    </div>
     <ul class="lista">
         <li>Elemento 1</li>
         <span>Span</span>
@@ -22,7 +24,7 @@
         <li class="excluir">Elemento 8</li>
         <li>Elemento 9</li>
     </ul>
-    <div>Si el div tiene contenido obtiene un borde</div>
+    <div class="Div-border">Si el div tiene contenido obtiene un borde</div>
     <a href="https//youtube.com" target="_blank">Youtube</a>
     <a href="https://www.ingles.com/pronunciacion/goals" target="_blank">Wed de pronunciación</a>
     <input type="email" name="email" id="">
