--- a/Html-Avanzado/Audio y Video/index.html
+++ b/Html-Avanzado/Audio y Video/index.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+    <!--El atributo (controls) lo que hace es que muestre los controles del apartado del video-->
+    <!--El atributo (loop) lo que hace es que cuando el video termine vuelva a comenzar-->
+    <!--El atributo (autoplay) lo que hace es que el video se reproduzca automaticamente-->
+    <!--El atributo (muted) lo que hace es que el video se reproduzca sin sonido-->
     <video controls loop autoplay muted src="Pie de página.mp4">
         <track src="captions.vtt" default kind="captions" srclang="es" label="Español (Latinoamérica)">
         </track>
